@@ -8,3 +8,4 @@ Change: When using the "Expire remote caches", the default is now to purge urls
 
 Bugfix: the schema creation script for oracle would not work
 
+Bugfix: added Postgres schema creation script
